@@ -21,7 +21,7 @@ New Breed Software</p>
 <p><a href="mailto:bill@newbreedsoftware.com">bill@newbreedsoftware.com</a><br>
 <a href="http://www.newbreedsoftware.com/tuxpaint/">http://www.newbreedsoftware.com/tuxpaint/</a></p>
 
-<p>June 14, 2002 - August 2, 2003</p>
+<p>June 14, 2002 - August 18, 2003</p>
 </center>
 
 <hr size=2 noshade>
@@ -524,6 +524,11 @@ New Breed Software</p>
 	    <td>&nbsp;</td>
 	  </tr>
 	  <tr>
+	    <td><code>malay</code></td>
+	    <td>&nbsp;</td>
+	    <td>&nbsp;</td>
+	  </tr>
+	  <tr>
 	    <td><code>norwegian</code></td>
 	    <td><code>nynorsk</code></td>
 	    <td>&nbsp;</td>
@@ -836,9 +841,14 @@ New Breed Software</p>
 	<td>Korean</td>
       </tr>
       <tr>
-        <td><code>lt_LT.UTF-8</code> (*)</td>
+        <td><code>lt_LT.UTF-8</code></td>
 	<td>Lietuviu</td>
 	<td>Lithuanian</td>
+      </tr>
+      <tr>
+        <td><code>ms_MY</code></td>
+	<td>&nbsp;</td>
+	<td>Malay</td>
       </tr>
       <tr>
         <td><code>nn_NO</code></td>
@@ -896,7 +906,7 @@ New Breed Software</p>
 	<td>Walloon</td>
       </tr>
       <tr>
-        <td><code>zh_CN</code></td>
+        <td><code>zh_CN</code> (*)</td>
 	<td>&nbsp;</td>
 	<td>Chinese (Simplified)</td>
       </tr>
