@@ -1,5 +1,5 @@
-.\" tuxpaint.1 - 2003.08.02
-.TH TUXPAINT 1 "02 Aug 2003" "0.9.12" "Tux Paint"
+.\" tuxpaint.1 - 2003.08.18
+.TH TUXPAINT 1 "18 Aug 2003" "0.9.12" "Tux Paint"
 .SH NAME
 tuxpaint -- A drawing program for young children.
 
@@ -259,6 +259,9 @@ german | dutch
 greek
 .TP 2
 -
+hebrew
+.TP 2
+-
 hungarian | magyar
 .TP 2
 -
@@ -280,6 +283,9 @@ korean
 lithuanian | lietuviu
 .TP 2
 -
+malay
+.TP 2
+-
 norwegian | nynorsk
 .TP 2
 -
@@ -293,6 +299,9 @@ romanian
 .TP 2
 -
 russian | russkiy
+.TP 2
+-
+slovak
 .TP 2
 -
 spanish | espanol
@@ -401,6 +410,7 @@ Sam "Criswell" Hart,
 Tedi Heriyanto,
 Pjetur G. Hjaltason,
 Karl Ove Hufthammer,
+Dmitriy Ivanov,
 Rasmus Erik Voel Jensen,
 Wang Jian,
 Kazuhiko,
@@ -422,8 +432,9 @@ TOYAMA Shin-ichi,
 Rita Verbauskaite,
 Daniel Jose Viana,
 Charles Vidal,
+Damian Yerrick,
 and
-Damian Yerrick.
+Muhammad Najmi Ahmad Zabidi.
 
 .SH "SEE ALSO"
 .BR tuxpaint-import (1),
